git lg alias command

--- a/.gitconfig
+++ b/.gitconfig
@@ -17,6 +17,7 @@
   sm = show-merges
   st = status
 	ac = !git add -A && git commit -am
+  lg = !git log --color --graph --pretty=format:'%Cred%h%Creset -%C(yellow)%d%Creset %s %Cgreen(%cr) %C(bold blue)<%an>%Creset' --abbrev-commit
 
 [apply]
 whitespace = fix
