--- a/.gitconfig
+++ b/.gitconfig
@@ -25,6 +25,7 @@ whitespace = fix
 excludesfile = ~/.gitignore
 attributesfile = ~/.gitattributes
 whitespace = fix,space-before-tab,tab-in-indent,trailing-space
+config = /usr/bin/vim
 [color]
 ui = auto
 [color "branch"]
