--- a/.gitconfig
+++ b/.gitconfig
@@ -26,6 +26,7 @@ excludesfile = ~/.gitignore
 attributesfile = ~/.gitattributes
 whitespace = fix,space-before-tab,tab-in-indent,trailing-space
 config = /usr/bin/vim
+editor = /usr/bin/vim
 [color]
 ui = auto
 [color "branch"]
