--- a/.gitconfig
+++ b/.gitconfig
@@ -18,6 +18,7 @@
   st = status
 	ac = !git add -A && git commit -am
   lg = !git log --color --graph --pretty=format:'%Cred%h%Creset -%C(yellow)%d%Creset %s %Cgreen(%cr) %C(bold blue)<%an>%Creset' --abbrev-commit
+  release = !git flow release start `date +'%Y%m%d-%k%M00'`
 
 [apply]
 whitespace = fix
