Add `no-reply` email to git global config

--- a/.gitconfig
+++ b/.gitconfig
@@ -1,6 +1,6 @@
 [user]
   name = Pepe Cano
-  email = ppcanodehuelva@gmail.com
+  email = 825430+ppcano@users.noreply.github.com
 
 [alias]
   br = branch
